# minerva_travel

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  HOSTINGER_DEPLOY.md  PLANO_IMPLEMENTACAO.md  README.md  config.js  index.html  llms.txt  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
assets/: DashboardPage-3HNNRgss.js  DashboardPage-BJNQ_x-m.js  DashboardPage-B_pVwvo1.js  DashboardPage-BsU-cI1L.js  DashboardPage-CC_pEeiU.js  DashboardPage-CIEcy14m.js  DashboardPage-CmjLEXpP.js  DashboardPage-CtPuMQy5.js  DashboardPage-D_l8kmbe.js  DashboardPage-Ds8paTo5.js  Header-BTDJ6-u7.js  Header-Bqk6OBB4.js  Header-CEuucnv4.js  Header-D33G2Fnc.js  Header-DUcuAvyC.js  Header-Ddew0kcW.js  Header-dibSgDbU.js  HomePage-B4wVrmv_.js  HomePage-BH2nd5HM.js  HomePage-BwcBE0PX.js  HomePage-C-TVLy7f.js  HomePage-CheRNgFG.js  HomePage-D0SHmBjJ.js  HomePage-DFeGJ7jU.js  HomePage-DRN6kHdq.js  LoginPage-8IhyNWkk.js  LoginPage-Bh3OvRJ7.js  LoginPage-CGoQERJc.js  LoginPage-CLSq-5SH.js  LoginPage-D2m74lt2.js  LoginPage-Dl6MSRUK.js  LoginPage-Gjqvg7uc.js  LoginPage-QSi2d5aA.js  LoginPage-bNfuNIQ2.js  PricingPage-BZWkSH2d.js  PricingPage-CCA_EKAq.js  PricingPage-C_9u-YSg.js  PricingPage-CoX2jjcm.js  PricingPage-DOrFtu9x.js  PricingPage-DrxnAvnz.js  (+84 more)
docs/: ENVIRONMENT_MATRIX.md  SECURITY_EXCEPTIONS.md
frontend/: README.md  package-lock.json  package.json  vite.config.js
public_html/: config.js  index.html
scripts/: check_env_examples.py  check_supabase_migrations.sh  cleanup_expired_guides.py  create_placeholder_assets.py  (+7 more)
(+358 files in other folders)
