[project]
name = "minerva-travel"
version = "0.1.0"
description = "Gerador local de guias de viagem infantis em PDF"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "pillow>=10.4.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "replicate>=1.0.0",
  "uvicorn>=0.30.0",
  "weasyprint>=62.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.5.5",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
